--- a/InterviewMe.Web/package.json
+++ b/InterviewMe.Web/package.json
@@ -14,5 +14,10 @@
   },
   "name": "cool-app",
   "private": true,
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "dependencies": {
+    "axios": "^0.18.0",
+    "bootstrap": "^4.0.0",
+    "jquery": "^3.3.1"
+  }
 }
