--- a/InterviewMe.Web/Scripts/react-temp/package.json
+++ b/InterviewMe.Web/Scripts/react-temp/package.json
@@ -3,8 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "bootstrap": "^4.0.0",
+    "gsap": "^1.20.4",
+    "jquery": "^3.3.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1"
   },
   "scripts": {
