--- a/InterviewMe.Services/app.config
+++ b/InterviewMe.Services/app.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <appSettings>
+    <add key="AWSProfileName" value=""/>
+    <add key="AWSAccessKey" value="AKIAI55ULJ67XQ62JF5A"/>
+    <add key="AWSSecretKey" value="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"/>
+  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
