--- a/InterviewMe.Web/Scripts/react-temp/package.json
+++ b/InterviewMe.Web/Scripts/react-temp/package.json
@@ -9,6 +9,7 @@
     "jquery": "^3.3.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
+    "react-ionicons": "^2.1.6",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1"
