--- a/InterviewMe.Web/package.json
+++ b/InterviewMe.Web/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.0.0",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "react-ionicons": "^2.1.6"
   }
 }
