--- a/InterviewMe.Web/package.json
+++ b/InterviewMe.Web/package.json
@@ -19,6 +19,8 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.0.0",
     "jquery": "^3.3.1",
+    "node-sass-chokidar": "^1.2.2",
+    "npm-run-all": "^4.1.2",
     "react-ionicons": "^2.1.6"
   }
 }
