--- a/InterviewMe.Web/Scripts/react-temp/package.json
+++ b/InterviewMe.Web/Scripts/react-temp/package.json
@@ -8,7 +8,6 @@
     "gsap": "^1.20.4",
     "jquery": "^3.3.1",
     "node-sass-chokidar": "^1.2.2",
-    "npm-run-all": "^4.1.2",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-ionicons": "^2.1.6",
@@ -25,5 +24,8 @@
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.2"
   }
 }
