--- a/InterviewMe.Web/Scripts/react-temp/package.json
+++ b/InterviewMe.Web/Scripts/react-temp/package.json
@@ -8,6 +8,7 @@
     "gsap": "^1.20.4",
     "jquery": "^3.3.1",
     "node-sass-chokidar": "^1.2.2",
+    "popper.js": "^1.14.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-ionicons": "^2.1.6",
