--- a/InterviewMe.Web/Web.config
+++ b/InterviewMe.Web/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=localhost;Initial Catalog=MyDb;User ID=UserLoginNameHere;Password=Password1233" providerName="System.Data.SqlClient" />
+    <add name="InterviewMeConnection" connectionString="Data Source=interviewme.c5ri1vkoetxv.us-west-1.rds.amazonaws.com,1433;Initial Catalog=InterviewMe;User ID=ltucker;Password=12as12as" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <!-- Default System Settings -->
