--- a/InterviewMe.Models/InterviewMe.Models.csproj
+++ b/InterviewMe.Models/InterviewMe.Models.csproj
@@ -46,12 +46,17 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Domain\Audio.cs" />
+    <Compile Include="Domain\Quiz.cs" />
+    <Compile Include="Requests\AudioRequest.cs" />
+    <Compile Include="Requests\AudioUpdateRequest.cs" />
     <Compile Include="Requests\QuestionRequest.cs" />
     <Compile Include="Requests\QuizRequest.cs" />
     <Compile Include="Domain\User.cs" />
     <Compile Include="Domain\UserBase.cs" />
     <Compile Include="Interfaces\IUserAuthData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Requests\QuizUpdateRequest.cs" />
     <Compile Include="Requests\UserRequest.cs" />
     <Compile Include="Requests\UserUpdateRequest.cs" />
     <Compile Include="Responses\BaseResponse.cs" />
