--- a/InterviewMe.Services/InterviewMe.Services.csproj
+++ b/InterviewMe.Services/InterviewMe.Services.csproj
@@ -70,8 +70,10 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AudioServices.cs" />
     <Compile Include="Cache\MemoryCacheDefault.cs" />
     <Compile Include="Cryptography\Base64StringCryptographyService.cs" />
+    <Compile Include="IAudioServices.cs" />
     <Compile Include="Interfaces\Cryptography\ICryptographyService.cs" />
     <Compile Include="Interfaces\IAuthenticationService.cs" />
     <Compile Include="Interfaces\ICacheService.cs" />
