--- a/InterviewMe.Web/InterviewMe.Web.csproj
+++ b/InterviewMe.Web/InterviewMe.Web.csproj
@@ -235,6 +235,7 @@
     <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\Api\Tests\TestAuthController.cs" />
+    <Compile Include="Controllers\AudioController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\JsBuilderController.cs" />
