--- a/InterviewMe.Web/Scripts/react-temp/package.json
+++ b/InterviewMe.Web/Scripts/react-temp/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.0.0",
+    "font-awesome": "^4.7.0",
     "gsap": "^1.20.4",
     "jquery": "^3.3.1",
     "node-sass-chokidar": "^1.2.2",
