--- a/InterviewMe.Web/Web.config
+++ b/InterviewMe.Web/Web.config
@@ -33,8 +33,17 @@
   </system.web>
   <system.webServer>
     
-    <rewrite>
-      <rules>
+     <rewrite>
+      <outboundRules>
+        <clear />
+        <rule name="AddCrossDomainHeader">
+          <match serverVariable="RESPONSE_Access_Control_Allow_Origin" pattern=".*" />
+          <conditions logicalGrouping="MatchAll" trackAllCaptures="true">
+            <add input="{HTTP_ORIGIN}" pattern="(http(s)?://(.+\.)?localhost:\d*)" />
+          </conditions>
+          <action type="Rewrite" value="{C:0}" />
+        </rule>
+      </outboundRules>
         <!--
         The Admin route will rewrite all paths starting with admin to the admin/index.html page
         the client application will pick up the rest of the route for client side routing
@@ -43,6 +52,7 @@
         * Urls starting with Api are negated so they are allowed to go through to the WebApi Routing
         
         -->
+       <rules>
         <rule name="Admin AngularJS Routes" stopProcessing="true">
           <match url="^admin.*$" />
           <conditions logicalGrouping="MatchAll">
@@ -79,7 +89,7 @@
         
         
         -->
-      </rules>
+         </rules>
     </rewrite>
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
@@ -138,8 +148,24 @@
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.4.0" newVersion="5.2.4.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.4.0" newVersion="5.2.4.0" />
+      </dependentAssembly>
     </assemblyBinding>
     
+    <httpprotocol>
+<customheaders>
+<add name="Access-Control-Allow-Origin" value="*"/>
+<add name="Access-Control-Allow-Headers" value="Accept, Origin, Content-Type"/>
+<add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE, OPTIONS"/>
+</customheaders>
+</httpprotocol>
+  
   </runtime>
   <system.codedom>
     <compilers>
