--- a/InterviewMe.Models/InterviewMe.Models.csproj
+++ b/InterviewMe.Models/InterviewMe.Models.csproj
@@ -47,10 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Domain\Audio.cs" />
+    <Compile Include="Domain\Questions.cs" />
     <Compile Include="Domain\Quiz.cs" />
     <Compile Include="Requests\AudioRequest.cs" />
     <Compile Include="Requests\AudioUpdateRequest.cs" />
     <Compile Include="Requests\QuestionRequest.cs" />
+    <Compile Include="Requests\QuestionsUpdateRequest.cs" />
     <Compile Include="Requests\QuizRequest.cs" />
     <Compile Include="Domain\User.cs" />
     <Compile Include="Domain\UserBase.cs" />
