--- a/InterviewMe.Services/InterviewMe.Services.csproj
+++ b/InterviewMe.Services/InterviewMe.Services.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Interfaces\IUsersService.cs" />
     <Compile Include="IQuizzesService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuestionsService.cs" />
     <Compile Include="QuizzesService.cs" />
     <Compile Include="Security\IIdentityExtensions.cs" />
     <Compile Include="UserService.cs" />
