--- a/InterviewMe.Web/Scripts/react-temp/package.json
+++ b/InterviewMe.Web/Scripts/react-temp/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.0.0",
     "gsap": "^1.20.4",
     "jquery": "^3.3.1",
+    "microsoft-speech-browser-sdk": "0.0.12",
     "node-sass-chokidar": "^1.2.2",
     "popper.js": "^1.14.1",
     "react": "^16.3.0",
